welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:2: error: '(' expected but identifier found.
	if isMorning==true {
           ^answerCell:10: error: illegal start of simple expression
} }
  ^